
add_library(LibProject 
            appframe.cpp  
            battery.cpp  
            buttons.cpp  
            currentsensor.cpp  
            display.cpp
            ui.cpp
            mqttclient.cpp  
            tempsensor.cpp
            configmanager.cpp
            sandman.cpp
            batterymonitor.cpp
          )



